I added a link in the README.md file to the Analysis.md file.

--- a/README.html
+++ b/README.html
@@ -138,7 +138,7 @@ $(document).ready(function () {
 </ul>
 <p><em>ROOT/Analysis</em></p>
 <ul>
-<li>Analysis.Rmd, the actual analysis, is in the Analysis folder. Please navigate to it to view the analysis.</li>
+<li>Analysis.md, the actual analysis, is in the Analysis folder. <a href="https://github.com/chavenstein/MSDS6306-Unit11-Assignment/blob/master/Analysis/Analysis.md">Please navigate to it here to view the analysis.</a></li>
 </ul>
 <p><em>ROOT/Analysis/Data</em></p>
 <ul>
